# 8051-ASM-Plugin

./: .gitignore  LICENSE  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json  vscode-profile-2021-01-02-21-49-39.cpuprofile  vscode-profile-2021-01-02-21-50-38.cpuprofile
.VSCodeCounter/2020-11-19_12-47-40/: details.md  results.csv  results.md  results.txt
client/: package-lock.json  package.json  tsconfig.json
client/src/: extension.ts
client/src/test/: runTest.ts
dataToTestOn/asm/: PROG28.ASM  PROG28.hex  PROG28.lst  ZAD10-2.asm  test.asm  test.hex  test.lst  test2.asm  test2.hex  test2.lst
dataToTestOn/asm/1/: PROG01.ASM  PROG01.hex  PROG01.lst  PROG02.ASM  PROG02.hex  PROG02.lst  PROG03.asm  PROG03.hex  PROG03.lst
dataToTestOn/asm/2/: PROG01.asm  PROG01.hex  PROG01.lst  PROG21.ASM  PROG21.hex  PROG21.lst  PROG21a.asm  PROG21a.hex  PROG21a.lst  PROG23.asm  PROG23.hex  PROG23.lst  PROG24.ASM  PROG24.hex  PROG25.ASM  PROG25.hex  PROG25.lst  PROG26.ASM  PROG26.hex  PROG26.lst  PROG27.ASM  PROG27.lst  prog22.asm  prog22.hex  prog22.lst
dataToTestOn/asm/3/: 20.asm  20.hex  20.lst  prog01.asm  prog01.hex  prog01.lst  prog02.asm  prog02.hex  prog02.lst  prog03.asm  prog03.hex  prog03.lst  prog04.asm  prog04.hex  prog04.lst  prog05.asm  prog05.hex  prog05.lst
dataToTestOn/asm/4/: PROG01.asm  PROG01.hex  PROG01.lst  PROG02.asm  PROG02.hex  PROG02.lst  prog03.asm  prog03.hex  prog03.lst  prog04.asm  prog04.hex  prog04.lst  prog05.asm  prog05.hex  prog05.lst  prog06.asm  prog06.hex  prog06.lst  prog07.asm  prog07.hex  prog07.lst  prog08.asm  prog08.hex  prog08.lst
scripts/: 1.buildPlugin.ps1  2.publishPlugin.ps1  buildAndLaunchDocsEditor.ps1  buildPlugin.ps1  buildReleaseServer.ps1  launchDocsEditor.ps1  launchServerAndVsCodeClient.ps1  x.ps1
server/: asm8051.code-workspace  package-lock.json  package.json  tsconfig.json
server/asm8051_docs/: Cargo.toml
server/asm8051_docs/load_documentation_internal/: Cargo.toml
server/asm8051_docs/load_documentation_internal/src/: lib.rs  types.rs
server/asm8051_localize/: Cargo.toml
server/asm8051_localize/locales/: app.yaml
server/asm8051_localize/src/: lib.rs
server/asm8051_lsp/: Cargo.toml  build.ps1
server/asm8051_lsp/i18n/en/: asm8051_lsp.ftl
server/asm8051_lsp/i18n/pl/: asm8051_lsp.ftl
server/asm8051_lsp/load_documentation/json_documentation/english/: arithmetic.json  data_transfer.json  directives.json  dsm51.json  flags_and_bits.json  logical.json  program_control.json  registers.json
server/asm8051_lsp/load_documentation/json_documentation/polish/: arithmetic.json  data_transfer.json  flags_and_bits.json  logical.json  program_control.json
server/asm8051_lsp/load_documentation/src/: lib.rs
server/asm8051_lsp/macros/load_documentation/: Cargo.toml
server/asm8051_lsp/macros/load_documentation/json_documentation/.shared/: arithmetic.json  data_transfer.json  directives.json  dsm51.json  flags_and_bits.json  logical.json  program_control.json  registers.json
server/asm8051_lsp/macros/load_documentation/json_documentation/english/: arithmetic.json  data_transfer.json  dsm51.json  flags_and_bits.json  logical.json  program_control.json  registers.json
server/asm8051_lsp/macros/load_documentation/json_documentation/polish/: arithmetic.json  data_transfer.json  directives.json  dsm51.json  logical.json  program_control.json  registers.json
server/asm8051_lsp/macros/load_documentation/load_documentation_internal/src/: debugging.rs  lib.rs  types.rs
server/asm8051_lsp/macros/load_documentation/src/: lib.rs  types.rs
server/asm8051_lsp/macros/shared/: Cargo.toml
server/asm8051_lsp/src/: backend.rs  client_configuration.rs  diagnostics.rs  docs.rs  flags.rs  hover.rs  i18n.rs  main.rs
server/asm8051_parser/: Cargo.toml  build.rs  rust-toolchain.toml
server/asm8051_parser/i18n/en/: asm8051_parser.ftl
server/asm8051_parser/i18n/pl/: asm8051_parser.ftl
server/asm8051_parser/macros/validate_issue_codes/: Cargo.toml
server/asm8051_parser/macros/validate_issue_codes/src/: lib.rs
server/asm8051_parser/macros/validate_issue_codes_internal/: Cargo.toml
server/asm8051_parser/macros/validate_issue_codes_internal/src/: lib.rs
server/asm8051_parser/src/: extensions.rs  i18n.rs  issues.rs  lexer.rs  lexer_old.rs  lib.rs
server/asm8051_parser/src/lexer/: analysis.rs  extensions.rs  initial.rs  keywords.rs  mod.rs  tokens.rs
server/asm8051_parser/src/lexer/tests/: keywords.rs  mod.rs  newline_whitespace_and_initial_char_type.rs  spanned_strings.rs  uncategorised.rs
server/asm8051_parser/src/lexer/tests/lexical_analysis/: comments.rs  mod.rs  strings.rs  test.asm  uncategorised.rs
server/asm8051_parser/src/parser/: ast.rs  mod.rs
server/asm8051_shared/: Cargo.toml  rust-toolchain.toml
server/locales/: app.yaml
server/lsp_server_8051_asm/: Cargo.toml  _ignore  build.ps1
server/lsp_server_8051_asm/i18n/en/: lsp_server_8051_asm.ftl
server/lsp_server_8051_asm/i18n/pl/: lsp_server_8051_asm.ftl
server/lsp_server_8051_asm/load_documentation/: Cargo.toml
server/lsp_server_8051_asm/load_documentation/json_documentation/english/: arithmetic.json  control.json  data_transfer.json  directives.json  dsm51.json  flags_and_bits.json  logical.json  program_control.json  registers.json
server/lsp_server_8051_asm/load_documentation/json_documentation/polish/: arithmetic.json  data_transfer.json  directives.json  dsm51.json  flags_and_bits.json  logical.json  program_control.json  registers.json
server/lsp_server_8051_asm/load_documentation/src/: lib.rs
server/lsp_server_8051_asm/src/: backend.rs  client_configuration.rs  diagnostics.rs  flags.rs  hover.rs  hover_documentation.rs  main.rs  types.rs
server/lsp_server_8051_asm/src/hover_documentation/: arithmetic.rs  documentation.rs  mod.rs
server/src/: debug.ts  server.ts
server/src/docs/: boolean.ts  (+8 more)
snippets/: arthmetic.code-snippets  initsAndProcedures.code-snippets  initsAndProgramControl.code-snippets  snippets.code-snippets
syntaxes/: asm.tmLanguage.json  unused
tools/QaD8051JDE/: QaD8051JDE.sln  readme.md
(+185 files in other folders)
