[package]
name = "asm8051_localize"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
rust-i18n = "2"
serde = "1"
serde_json = "1.0.111"
serde_yaml = "0.9.30"
lazy_static = "1.4.0"
once_cell = "1.10.0"