[package]
name = "asm8051_lsp"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tower-lsp = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
rand = "*"
unicode-segmentation = "1.8.0"
regex = "1.5.4"
ropey = "1.3.2"
dashmap = "5.4.0"
i18n-embed = { version = "*", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "*"
rust-embed = "6"
bitflags = "*"
lazy_static = "1.4.0"
once_cell = "1.8.0"

load_documentation = { path = "macros/load_documentation", version = "*" }
shared = { path = "macros/shared", version = "*" }
asm8051_parser = { path = "../asm8051_parser", version = "*" }

[dev-dependencies]
test-case = "*"

[build.env]
passthrough = [
    "RUST_BACKTRACE",
    "RUST_LOG",
    "TRAVIS",
]