[package]
name = "asm8051_lsp"
version = "0.4.0"
edition = "2021"

# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto = true
# codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
rand = "*"
unicode-segmentation = "1.8.0"
regex = "1.5.4"
ropey = "1.3.2"
dashmap = "5.4.0"
bitflags = "*"
lazy_static = "1.4.0"
once_cell = "1.8.0"

load_documentation = { path = "../asm8051_docs", version = "*" }
asm8051_parser = { path = "../asm8051_parser", version = "*" }
asm8051_shared = { path = "../asm8051_shared", version = "*" }
asm8051_localize = { path = "../asm8051_localize", version = "*" }

[dev-dependencies]
test-case = "*"

[build.env]
passthrough = [
    "RUST_BACKTRACE",
    "RUST_LOG",
    "TRAVIS",
]