[package]
name = "asm8051_parser"
version = "0.2.0"
edition = "2021"

[lib]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
chumsky = "*"
regex = "*"
string-join = "*"
ropey =  { version = "*", features = ["unicode_lines"] }
ahash = "*"
lazy_static = "1.4.0"
once_cell = "1.8.0"
validate_issue_codes = { path = "macros/validate_issue_codes" }

rust-i18n = "2"
asm8051_localize = { path = "../asm8051_localize", version = "*" }


[dev-dependencies]
test-case = "*"
