[package]
name = "asm8051_parser"
version = "0.4.0"
edition = "2021"

[lib]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
chumsky = "*"
regex = "*"
string-join = "*"
ropey =  { version = "*", features = ["unicode_lines"] }
ahash = "*"
lazy_static = "1.4.0"
once_cell = "1.8.0"
validate_issue_codes = { path = "macros/validate_issue_codes" }

asm8051_localize = { path = "../asm8051_localize", version = "*" }
asm8051_shared = { path = "../asm8051_shared", version = "*" }



[dev-dependencies]
test-case = "*"
