[package]
name = "lsp_server_8051_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tower-lsp = "0.17.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "*"
rand = "*"
unicode-segmentation = "1.8.0"
regex = "1.5.4"

i18n-embed = { version = "*", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "*"
rust-embed = "6"

bitflags = "*"
lazy_static = "1.4.0"
once_cell = "1.8.0"
load_documentation = { path = "load_documentation", version = "0.1.0" }
