[package]
name = "load_documentation_internal"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.10", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
