[package]
name = "load_documentation"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.10", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
shared = { path = "../shared", version = "*" }
