[package]
name = "validate_issue_codes"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["full", "visit"] }
quote = "*"
proc-macro2 = "1.0"
validate_issue_codes_internal = { path = "../validate_issue_codes_internal" }